# LogoMaker

./: .gitignore  CMakeLists.txt  ColorBox.cpp  ColorBox.h  ColorGradient.cpp  ColorGradient.h  ColorOption.cpp  ColorOption.h  ColorPicker.cpp  ColorPicker.h  Coloring.cpp  Coloring.h  Cursor.cpp  Cursor.h  DropdownMenu.cpp  DropdownMenu.h  EventHandler.cpp  EventHandler.h  FileItem.cpp  FileItem.h  FileNode.cpp  FileNode.h  FileTree.cpp  FileTree.h  Fonts.cpp  Fonts.h  GUI_Component.cpp  GUI_Component.h  History.cpp  History.h  HistoryNode.h  Image.cpp  Image.h  InputBox.cpp  InputBox.h  Item.cpp  Item.h  ItemList.cpp  ItemList.h  KeyShortcuts.cpp  (+41 more)
logo/: logo.txt
save/: initial.txt
